# AndroidCube

./: .gitignore  README.md
app/: build.gradle.kts
app/src/androidTest/java/com/Cube/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RenderProgram.cpp  RenderProgram.h  conanfile.txt  main.cpp  native-lib.cpp
app/src/main/cpp/render/: Cube.cpp  Cube.h  Object.cpp  Object.h  Primitive.cpp  Primitive.h  Shader.cpp  Shader.h
app/src/main/cpp/render/buffers/: ARaiiBuffer.cpp  ARaiiBuffer.h  Ebo.cpp  Ebo.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  Vertex.cpp  Vertex.h
app/src/main/cpp/render/primitives/: PCube.cpp  PCube.h  Primitive.cpp  Primitive.h
app/src/main/cpp/render/shaders/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h
app/src/main/cpp/render/techniques/: ATechnique.cpp  ATechnique.h  TechniqueType.h  Transform3dTechnique.cpp  Transform3dTechnique.h  TransformTechnique.cpp  TransformTechnique.h
app/src/main/java/com/Cube/: JNIWrapper.java  MainActivity.java  RendererWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: shader_f.frag  shader_v.vert
app/src/test/java/com/Cube/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
